--- a/sfmlLib/Makefile
+++ b/sfmlLib/Makefile
@@ -1,9 +1,6 @@
-
 NAME	= sfml.so
 
 CLANG 	= clang++
-
-NCUR 	= -dynamiclib
 
 FLAG	= -std=c++11 -Wall -Wextra -Werror
 
@@ -19,31 +16,32 @@ SRC		= ../objects/Game.class.cpp\
 		
 OBJ		= $(SRC:.cpp=.o)
 
-OBJ_DIR = ./objects/
 
 SFML_DIR 	=	SFML_Lib/
+SFML_INC 	=	SFML_Lib/SFML-2.5.0-macOS-clang/include
+SFML_FRM	=	SFML_Lib/SFML-2.5.0-macOS-clang/Frameworks
+SFML_LINK 	=	-F$(SFML_FRM) -framework SFML -framework sfml-graphics -framework sfml-window -framework sfml-system
 
-SFML_LINK 	=	-F$(SFML_DIR)/SFML-2.5.0-macOS-clang/Frameworks -framework SFML -framework sfml-graphics -framework sfml-window -framework sfml-system
-SFML_INC 	=	$(SFML_DIR)/SFML-2.5.0-macOS-clang/include
+PWD 		=	$(shell pwd)
 LIB_FLAG	=	-shared -rpath $(PWD)/$(SFML_FRM) -nostartfiles -dynamiclib
 
 all: sfml $(NAME)
 
-$(OBJ_DIR)%.o: %.cpp %.hpp
-	@$(CLANG) $(FLAG) -c $< -o $@ -I../includes -I $(SFML_INC)
+%.o:%.cpp
+	@$(CLANG) $(FLAG) -c $< -o $@ -I../includes -I$(SFML_INC)
 
-$(NAME): $(OBJ) $(LIB)
-	@$(CLANG) $(FLAG)  $(OBJ) -o $(NAME) $(SFML_LINK) $(LIB_FLAG) -I $(SFML_INC)
+$(NAME): $(OBJ)
+	@$(CLANG) $(FLAG) $(OBJ) -o $(NAME) $(SFML_LINK) $(LIB_FLAG) -I$(SFML_INC)
 
 sfml:
 	@mkdir -p $(SFML_DIR)
-	@test -d $(SFML_DIR)/SFML-2.5.0-macOS-clang || make sfml_dl
+	@test -d SFML_Lib/SFML-2.5.0-macOS-clang || make sfml_dl
 
  sfml_dl:
 	@curl -OL http://www.sfml-dev.org/files/SFML-2.5.0-macOS-clang.tar.gz
 	@tar zxvfC 'SFML-2.5.0-macOS-clang.tar.gz' $(SFML_DIR)
 	@rm -rf SFML-2.5.0-macOS-clang.tar.gz
-	@cd $(SFML_DIR)/SFML-2.5.0-macOS-clang/Frameworks && ln -s ../extlibs/freetype.framework
+	# @cd SFML_Lib/SFML-2.5.0-macOS-clang/Frameworks && ln -s ../extlibs/freetype.framework
 
 clean:
 	@rm -rf $(SFML_DIR)
