--- a/SDLlib/Makefile
+++ b/SDLlib/Makefile
@@ -18,24 +18,26 @@
 
 # OBJ =	$(SRC:.cpp=.o)
 
-# INCLUDES =	-I./frameworks/SDL2.framework/Headers/ \
-# 			-I./frameworks/SDL2_image.framework/Headers/ \
-# 			-I./frameworks/SDL2_mixer.framework/Headers/ \
-# 			-I./frameworks/SDL2_ttf.framework/Headers/ \
+# INCLUDES =	-I./SDL/SDL2.framework/Headers/ \
+# 			-I./SDL/SDL2_image.framework/Headers/ \
+# 			-I./SDL/SDL2_mixer.framework/Headers/ \
+# 			-I./SDL/SDL_ttf.framework/Headers/ \
+# 			-F./SDL \
 # 			-I../includes
 
-# FRAMEWORKS = -F./frameworks -rpath ./frameworks -framework SDL2 \
-# 												-framework SDL2_image \
-# 												-framework SDL2_mixer \
-# 												-framework SDL2_ttf
+# FRAMEWORKS = -F./SDL -rpath ./SDL	-framework SDL2 \
+# 									-framework SDL2_image \
+# 									-framework SDL2_mixer \
+# 									-framework SDL_ttf
 
 # all: $(NAME)
 
 # $(OBJ_DIR)%.o:	%.cpp %.hpp
-# 	@$(CLANG) $(FLAGS) -c $< -o $@ $(FRAMEWORKS) $(INCLUDES) 
+# 	@$(CLANG) $(FLAGS) -I $(INCLUDES) -c -o $@ $<
 
 # $(NAME): $(OBJ) $(HDR)
-# 	@$(CLANG) $(FLAGS) $(DYNAMIC_LIB) $(OBJ) -o $(NAME) 
+# 	# @$(CLANG) $(FLAGS) $(DYNAMIC_LIB) $(OBJ) -o $(NAME)
+# 	@$(CLANG) $(FLAGS) $(DYNAMIC_LIB) -o $(NAME) $(OBJ) $(LIBFT) -I $(INCLUDES) $(FRAMEWORKS)
 
 # clean:
 # 	@rm -f *.o	
@@ -53,7 +55,7 @@ FLAGS		=	-std=c++11 -O3 -Wall -Wextra -Werror
 
 SDL_DIR		=	./SDL
 SDL_FRM		=	-F $(SDL_DIR)
-SDL_LINK	=	-framework SDL2
+SDL_LINK	=	-framework SDL2 -framework SDL2_ttf
 
 PWD			= 	$(shell pwd)
 LIB_FLAG	=	-shared  -rpath $(PWD)/$(SDL_DIR) -nostartfiles -dynamiclib
@@ -86,16 +88,23 @@ $(NAME): $(OBJ_FILES)
 sdl:
 	@ mkdir -p $(SDL_DIR)
 	@ test -f SDL/SDL2.framework/SDL2 || make sdl2_download
+	@ test -f SDL/SDL2_ttf.framework/SDL2_ttf || make sdl_ttf_download
 
 sdl2_download:
-	@ curl -o sdl2.dmg https://www.libsdl.org/release/SDL2-2.0.8.dmg
+	@ curl -o sdl2.dmg https://www.libsdl.org/release/SDL2-2.0.9.dmg
 	@ hdiutil attach sdl2.dmg;
 	@ cd ; cp -R -i ../../../Volumes/SDL2/SDL2.framework $(PWD)/$(SDL_DIR)/SDL2.framework; hdiutil eject ../../../Volumes/SDL2;
 	@ rm -rf sdl2.dmg
 
+sdl_ttf_download:
+	@ curl -o sdl_ttf.dmg https://www.libsdl.org/projects/SDL_ttf/release/SDL2_ttf-2.0.15.dmg
+	@ hdiutil attach sdl_ttf.dmg;
+	@ cd ; cp -R -i ../../../Volumes/SDL2_ttf/SDL2_ttf.framework $(PWD)/$(SDL_DIR)/SDL2_ttf.framework; hdiutil eject ../../../Volumes/SDL2_ttf;
+	@ rm -rf sdl_ttf.dmg
+
 clean:
 	@ rm -rf $(OBJ_FILES)
-	@ rm -fr $(SDL_DIR)
+	@ rm -rf $(SDL_DIR)
 
 fclean:	clean
 	@ rm -rf $(NAME)
